@@ -7,6 +7,7 @@ CHANGES
 ------------------
 
 - Python 3 compatibility fixes
+- More efficient PJContainer.values() implementation
 
 
 1.2.2 (2017-12-12)
